<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="range_done_label">Done</string>
    <string name="range_ok">@android:string/ok</string>
    <string name="range_cancel">@android:string/cancel</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="range_hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="range_minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="range_select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="range_select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="range_day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="range_year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="range_select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="range_select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="range_item_is_selected"><xliff:g example="2013" id="item">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="range_deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="range_time_placeholder" translatable="false">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="range_time_separator" translatable="false">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="range_radial_numbers_typeface" translatable="false">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="range_sans_serif" translatable="false">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="range_day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="range_from">FROM</string>
    <string name="range_to">TO</string>
    <string name="app_name">LaikipiaUniversityApp</string>
    <string name="new_user_signup">New user? <b>SignUp</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_password_details">provide account details for which you want to reset your password</string>


    <string name="reset_detail">select which contact details should we use ro reset your password</string>
    <string name="otp_code_text">Code</string>
    <string name="otp_verification_text">Verification</string>

    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="otp_Des_text">Enter the verification code  </string>
    <string name="newPassword">your identity has been verified! set you new password</string>
    <!-- Title of the demo displaying pop-up pickers. [CHAR LIMIT=40] -->
    <string name="cat_picker_demo_title">Date Picker</string>
    <!-- Description of what pickers are used for in applications. [CHAR LIMIT=NONE] -->
    <string name="cat_picker_description">Date pickers allow users to choose dates.</string>
    <!-- Button label that indicates clicking the button
    will launch a Material Date Picker [CHAR LIMIT=120] -->
    <string name="cat_picker_launch">Launch Material Date Picker</string>

    <!-- Informs that the user clicked the cancel button [CHAR LIMIT=120]-->
    <string name="cat_picker_user_clicked_cancel">The user clicked the cancel button.</string>
    <!-- Informs that the picker was cancelled [CHAR LIMIT=120]-->
    <string name="cat_picker_cancel">The picker was cancelled.</string>
    <!-- Informs that the user action is being awaited [CHAR LIMIT=120] -->
    <string name="cat_picker_no_action">Awaiting user action.</string>

    <!-- Grouping label for a set of radio buttons that choose the selection mode [CHAR LIMIT=45] -->
    <string name="cat_picker_date_selector">Selection Mode</string>
    <!-- Indicates that the selection mode is a single date [CHAR LIMIT=80] -->
    <string name="cat_picker_date_selector_single">Single Date</string>
    <!-- Indicates that the selection mode is a date range [CHAR LIMIT=80] -->
    <string name="cat_picker_date_selector_range">Date Range</string>

    <!-- Grouping label for a set of radio buttons that choose the visual theme [CHAR LIMIT=50] -->
    <string name="cat_picker_theme">Theme</string>
    <!-- Indicates that the default theme will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_theme_default">Default</string>
    <!-- Indicates that the dialog theme will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_theme_dialog">Dialog</string>
    <!-- Indicates that the fullscreen theme will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_theme_fullscreen">Fullscreen</string>
    <!-- Indicates that a custom theme will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_theme_custom">Custom</string>

    <!-- Grouping label for a set of radio buttons that
    choose the allowed calendar bounds [CHAR LIMIT=50] -->
    <string name="cat_picker_bounds">Bounds</string>
    <!-- Indicates that the default bounds will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_bounds_default">Default</string>
    <!-- Indicates that the bounds will be restricted to this year only [CHAR LIMIT=25] -->
    <string name="cat_picker_bounds_this_year">This year</string>
    <!-- Indicates that the bounds will be restricted to dates within 1 year [CHAR LIMIT=25] -->
    <string name="cat_picker_bounds_one_year_forward">Within 1 year</string>

    <!-- Grouping label for a set of radio buttons that choose valid dates [CHAR LIMIT=50] -->
    <string name="cat_picker_validation">Valid Days</string>
    <!-- Indicates that the default valid days will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_validation_default">Default</string>
    <!-- Indicates that only today and future days will be valid [CHAR LIMIT=25] -->
    <string name="cat_picker_validation_today_onward">Today onward</string>
    <!-- Indicates that only weekdays will be valid [CHAR LIMIT=25] -->
    <string name="cat_picker_validation_weekdays">Weekdays</string>
    <!-- Indicates that only the last 2 weeks will be valid [CHAR LIMIT=25] -->
    <string name="cat_picker_validation_last_two_weeks">Last 2 weeks</string>
    <!-- Indicates a multiple range [CHAR LIMIT=25] -->
    <string name="cat_picker_validation_multiple_range">Multiple range</string>


    <!-- Grouping label for a set of radio buttons that choose the title [CHAR LIMIT=50] -->
    <string name="cat_picker_title">Picker Title</string>
    <!-- Indicates that the default title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_title_default">Default</string>
    <!-- Indicates that a custom title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_title_custom">Custom</string>

    <!-- Grouping label for a set of radio buttons that choose the selection [CHAR LIMIT=50] -->
    <string name="cat_picker_selection">Default Selection</string>
    <!-- Indicates that the default selection will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_selection_default">Default</string>
    <!-- Indicates that today will be used for the selection [CHAR LIMIT=25] -->
    <string name="cat_picker_selection_today">Today</string>
    <!-- Indicates that a day in the next month will be used for the selection [CHAR LIMIT=25] -->
    <string name="cat_picker_selection_next_month">Next Month</string>

    <!-- Grouping label for a set of radio buttons that choose the openAt month [CHAR LIMIT=50] -->
    <string name="cat_picker_opening_month">Opening Month</string>
    <!-- Indicates that the picker will open to the default month [CHAR LIMIT=25] -->
    <string name="cat_picker_opening_month_default">Default</string>
    <!-- Indicates that the picker will open to today's month [CHAR LIMIT=25] -->
    <string name="cat_picker_opening_month_today">Today</string>
    <!-- Indicates that the picker will open to next month [CHAR LIMIT=25] -->
    <string name="cat_picker_opening_month_next">Next Month</string>

    <!-- Grouping label for a set of radio buttons that choose the input mode [CHAR LIMIT=50] -->
    <string name="cat_picker_input_mode">Input Mode</string>
    <!-- Indicates that the picker will start with calendar mode [CHAR LIMIT=25] -->
    <string name="cat_picker_input_mode_calendar">Calendar</string>
    <!-- Indicates that the picker will start with text input mode [CHAR LIMIT=25] -->
    <string name="cat_picker_input_mode_text">Text Input</string>

    <!-- Grouping label for a set of radio buttons that choose the positive button [CHAR LIMIT=50] -->
    <string name="cat_picker_positive_button">Picker Positive Button</string>
    <!-- Indicates that the default title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_positive_button_default">Default</string>
    <!-- Indicates that a custom title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_positive_button_custom">Custom</string>

    <!-- Grouping label for a set of radio buttons that choose the negative button [CHAR LIMIT=50] -->
    <string name="cat_picker_negative_button">Picker Negative Button</string>
    <!-- Indicates that the default title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_negative_button_default">Default</string>
    <!-- Indicates that a custom title will be used [CHAR LIMIT=25] -->
    <string name="cat_picker_negative_button_custom">Custom</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="action_settings">Settings</string>
    <string name="auto_highlight_selected_date_span">Auto highlight selected date span</string>
    <!-- The custom positive button text -->
    <string name="cat_picker_positive_button_text">DONE</string>
    <!-- The custom negative button text -->
    <string name="cat_picker_negative_button_text">Negative</string>
</resources>