<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OTPActivity"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code_text"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="100sp"
            android:textAllCaps="true"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:id="@+id/otpDescriptionText"
            android:text="@string/otp_Des_text"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_gravity="center"/>
        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:itemBackground="#65EAEAEA"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="40dp"
            app:lineColor="@color/black"
            app:lineWidth="1dp" />
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/black"
            android:text="@string/otp_verification_text"
            android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>