<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eee"
    tools:context=".Activities.AddAnnouncementsActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_close" />

        <EditText

            android:id="@+id/searchEt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_margin="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/close"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_event_add"
            android:drawableLeft="@drawable/ic_event_add"
            android:hint="Creating Channel"
            android:padding="5dp"
            android:textColor="@color/gray01"
            android:textColorHint="@color/gray01" />

    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/toolbarRl"
        android:layout_marginTop="10dp"
        android:background="@color/black">

    </View>

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/groupicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_event_add"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupicon"
        android:gravity="center_horizontal"
        android:text="@string/pick_date" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_button"
        android:gravity="center_horizontal"
        android:text="PICK TIME" />

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/groupicon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_toRightOf="@+id/date_button"
        android:gravity="center_horizontal"
        android:text="@string/selected_date"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/time_button"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/date_button"
        android:text="@string/selected_time"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/autohighlight_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_button"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/auto_highlight_selected_date_span"
        android:textColor="@color/black" />


    <EditText

        android:id="@+id/GroupTitleet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autohighlight_checkbox"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edittext01"
        android:hint="Event title"
        android:padding="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <EditText

        android:id="@+id/hostTitleet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/GroupTitleet"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edittext01"
        android:hint="Hosted By:"
        android:padding="30dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />
    <EditText
    android:id="@+id/venueTitleet"
        android:layout_toRightOf="@id/hostTitleet"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/GroupTitleet"
    android:layout_marginTop="10dp"
    android:background="@drawable/shape_edittext01"
    android:hint="venue:"
    android:padding="30dp"
    android:textColor="@color/black"
    android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/EventDescriptionet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hostTitleet"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_edittext01"
        android:gravity="top"
        android:hint="Event Descriptions"
        android:minHeight="100dp"
        android:padding="10dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/green400"
        android:src="@drawable/ic_submit_event"
        app:backgroundTint="@color/green400"
        app:borderWidth="0dp"
        app:rippleColor="@color/colorRed" />

</RelativeLayout>